--- a/ecommerce.yml
+++ b/ecommerce.yml
@@ -1,5 +1,5 @@
-token:
-  experation_time: 86400000
-  secret: user_token_native_application
+#token:
+#  experation_time: 86400000
+#  secret: user_token_native_application
 gateway:
   ip: 10.11.6.5
